add: version endpoint
